--- a/index.html
+++ b/index.html
@@ -2,44 +2,78 @@
 <html lang="ar">
 <head>
   <meta http-equiv="refresh" content="0;url=https://www.facebook.com">
-    <meta charset="UTF-8">
-    <title>صفحة تحويل</title>
-    <style>
-        /* اجعل الصفحة كاملة وخلفيتها بيضاء */
-        html, body {
-            height: 100%;
-            margin: 0;
-            background-color: #ffffff;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
+<meta charset="UTF-8">
+<title>صفحة تحويل</title>
+<style>
+    /* اجعل الصفحة كاملة وخلفيتها بيضاء */
+    html, body {
+        height: 100%;
+        margin: 0;
+        background-color: #ffffff;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+    }
 
-        /* الدائرة التي ستحمل الصورة */
-        .circle {
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-            overflow: hidden;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            /* إضافة ظل بسيط اختياري */
-            
-        }
+    /* الدائرة التي ستحمل الصورة */
+    .circle {
+        width: 150px;
+        height: 150px;
+        border-radius: 50%;
+        overflow: hidden;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
 
-        /* الصورة داخل الدائرة */
-        .circle img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-box-shadow: 0 0 1px rgba(0,0,0,0.1);
-        }
-    </style>
+    /* الصورة داخل الدائرة */
+    .circle img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    /* النقاط أسفل الدائرة */
+    .dots {
+        display: flex;
+        gap: 8px;
+    }
+
+    .dot {
+        width: 12px;
+        height: 12px;
+        border-radius: 50%;
+        background-color: #1877f2;
+        animation: bounce 1s infinite;
+    }
+
+    /* لجعل كل نقطة تبدأ الحركة بتأخير مختلف */
+    .dot:nth-child(1) { animation-delay: 0s; }
+    .dot:nth-child(2) { animation-delay: 0.2s; }
+    .dot:nth-child(3) { animation-delay: 0.4s; }
+    .dot:nth-child(4) { animation-delay: 0.6s; }
+    .dot:nth-child(5) { animation-delay: 0.8s; }
+
+    @keyframes bounce {
+        0%, 80%, 100% { transform: scale(0.5); opacity: 0.5; }
+        40% { transform: scale(1); opacity: 1; }
+    }
+</style>
 </head>
 <body>
     <div class="circle">
-        <img src="icon.png" >
+        <img src="icon.png">
+    </div>
+
+    <div class="dots">
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
     </div>
 </body>
 </html>
